# Mentor-Connect-V2

./: .env  .gitignore  .replit  dummy_DB.sql  package.json  pnpm-lock.yaml  pyproject.toml  replit.md  replit_backup.sql  requirements.txt
Python/: .env  .env.example  README.md  analysis.py  app.py  create_tables.sql  database.py  db.py  db_helpers.py  find_matches.py  frontend_fetch_example.js  get_blocks.py  get_questions.py  get_users.py  integration_api.py  locations.py  main.py  mentor_ranks.py  reports.py  requirements.txt  scheduling.py  seed_demo_data.sql  spamlblock.py
Python/api/adapters/: admin_adapter.py  analysis_adapter.py  probe.py  reports_adapter.py  scheduling_adapter.py
Python/api/routers/: admin.py  analytics.py  practice.py  python_reports.py  scheduling.py
Python/migrations/: 001_practice_additive.sql  002_requests_preferred_times.sql  003_chat_learning_schema.sql
Python/routers/: auth.py  chat.py  districts.py  matches.py  reports.py  requests.py  users.py
artifacts/api-server/: .env  package.json
artifacts/api-server/.replit-artifact/: artifact.toml
artifacts/api-server/python/: main.py
artifacts/api-server/src/: app.ts
artifacts/peerbridge/: index.html  package.json  vite.config.ts
artifacts/peerbridge/src/: App.tsx  (+1 more)
backend/app/: matching.py
database/: README.md  mentor_connect_mock_1000.sql
docs/: PYTHON_DB_HELPERS_GUIDE.md  STUDENT_CHAT_BACKEND_GUIDE.md  TUTOR_CHAT_LESSON_PLAN.md
lib/api-spec/: openapi.yaml
lib/db/: drizzle.config.ts
scripts/: post-merge.sh
tests/: conftest.py  test_python_only_adapters.py
(+49 files in other folders)
